OCMUI-4410: Fix update version graph for dark mode

--- a/src/components/clusters/common/Upgrades/UpdateGraph/UpdateGraph.scss
+++ b/src/components/clusters/common/Upgrades/UpdateGraph/UpdateGraph.scss
@@ -33,7 +33,7 @@
   width: 100%;
 
   &::before {
-    background-color: #06c;
+    background-color: var(--pf-t--global--color--brand--default);
     content: '';
     height: 4px;
     position: absolute;
@@ -53,7 +53,7 @@
 }
 
 .ocm-upgrade-graph-version {
-  color: initial;
+  color: var(--pf-t--global--text--color--regular);
   display: flex;
   flex-direction: column;
   height: 35px;
@@ -79,8 +79,8 @@
   }
 
   &::after {
-    background: #fff;
-    border: 2px solid #fff;
+    background: var(--pf-t--global--background--color--primary--default);
+    border: 2px solid var(--pf-t--global--background--color--primary--default);
     border-radius: 12px;
     content: '';
     height: 12px;
